// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`apollo-helper 1 query: 1 query 1`] = `

import autoInjectGql from "./macro";
import { graphql } from '@apollo/react-hoc';
import compose from 'lodash/flowRight';

const App = props => {
  return (
    <div>
      <span>1</span>
    </div>
  );
};

export const query = gql\`
  query queryDemo {
    a {
      b
    }
  }
\`;
export default autoInjectGql(App);

      ↓ ↓ ↓ ↓ ↓ ↓

import { graphql } from '@apollo/react-hoc';
import compose from 'lodash/flowRight';

const App = props => {
  return (
    <div>
      <span>1</span>
    </div>
  );
};

export default graphql(
  gql\`
    query queryDemo {
      a {
        b
      }
    }
  \`,
  {
    name: 'query'
  }
)(App);


`;

exports[`apollo-helper 2 query: 2 query 1`] = `

import autoInjectGql from "./macro";
import { graphql } from '@apollo/react-hoc';
import compose from 'lodash/flowRight';

const App = props => {
  return (
    <div>
      <span>1</span>
    </div>
  );
};

export const query1 = gql\`
  query queryDemo1 {
    a {
      b
    }
  }
\`;
export const query2 = gql\`
  query queryDemo2 {
    c {
      d
    }
  }
\`;
export default autoInjectGql(App);

      ↓ ↓ ↓ ↓ ↓ ↓

import { graphql } from '@apollo/react-hoc';
import compose from 'lodash/flowRight';

const App = props => {
  return (
    <div>
      <span>1</span>
    </div>
  );
};

export default compose(
  graphql(
    gql\`
      query queryDemo1 {
        a {
          b
        }
      }
    \`,
    {
      name: 'query1'
    }
  ),
  graphql(
    gql\`
      query queryDemo2 {
        c {
          d
        }
      }
    \`,
    {
      name: 'query2'
    }
  )
)(App);


`;
